Fixed bug#13128 - Overlapping buttons in the System configuration.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.SystemConfiguration.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.SystemConfiguration.css
@@ -1151,10 +1151,6 @@ h2.SearchResults {
     padding: 3px;
 }
 
-.IsLockedByMe .HashItem {
-    padding: 7px;
-}
-
 .HashItem .Key {
     float: left;
 }
